--- a/custom_agenda/readme
+++ b/custom_agenda/readme
@@ -8,20 +8,7 @@ Ci-après (dans la page 2) les commandes à lancer pour activer et configurer le
 Je reste disponible si besoin .
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+###################################################################################"
 
 
 
@@ -80,3 +67,4 @@ créer quelques  content type « Agenda event »    pour tester  ex : avec  un t
 qu’on revient sur le /evenement-agenda  on retrouve notre event afficher avec la couleur de la taxonomie définie 
 
 
+un cron est disponible pour dépublier le events  avec une date de fin dépassée 
